Some bonus tweaks for #61174 to make it not have that scrollbar even for really long names on fixed-width.  CSS trixxx courtesy of Nef.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@24847 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/AchievementsII/css/leaderboard.css
+++ b/extensions/wikia/AchievementsII/css/leaderboard.css
@@ -74,8 +74,10 @@ ul#leaderboard #points-label {
 	margin-left: 20px;
 }
 #leaderboard .user-name{
-	width:62%; /* kinda hacky */
+	max-width: 185px;
 	overflow:hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 #leaderboard .user-avatar {
